@@ -1,12 +1,11 @@
 package com.example.fumi_forte.controllers;
 
 import com.example.fumi_forte.aspects.BitacoraLog;
+import com.example.fumi_forte.dto.DatosFinalesTTDto;
 import com.example.fumi_forte.dto.ListaSolicitudesMontoSesionDto;
 import com.example.fumi_forte.dto.MontosPendientesDto;
 import com.example.fumi_forte.dto.SesionMontoDto;
 import com.example.fumi_forte.dto.SolicitudServicioUsuarioDto;
-import com.example.fumi_forte.models.Bitacora;
-import com.example.fumi_forte.models.Producto;
 import com.example.fumi_forte.models.SolicitudServicio;
 import com.example.fumi_forte.models.Usuario;
 import com.example.fumi_forte.models.Cliente;
@@ -15,15 +14,17 @@ import com.example.fumi_forte.repository.ClienteRepository;
 import com.example.fumi_forte.repository.SesionRepository;
 import com.example.fumi_forte.repository.SolicitudServicioRepository;
 import com.example.fumi_forte.repository.UsuarioRepository;
+import com.example.fumi_forte.services.AsignarTareaTrabajadoresCompletoService;
 import java.math.BigDecimal;
-import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.*;
+import java.util.stream.Collectors;
 
 @RestController
 
@@ -37,7 +38,7 @@ public class SolicitudServicioController {
     private ClienteRepository clientes;
     @Autowired
     private SesionRepository sesionRepository;
-    
+
     @BitacoraLog("Se creo una solicitud de Servicio")
     @PostMapping
     @RequestMapping("/solicitud_servicio")
@@ -47,23 +48,23 @@ public class SolicitudServicioController {
         solicitud.setIdCertificado(null);
         solicitud.setMontoPendienteCotizacion(new BigDecimal("0.00"));
         Authentication auth = SecurityContextHolder.getContext().getAuthentication();
-         if (auth != null && auth.isAuthenticated()) {
-             String username = auth.getName();
-             Usuario usuario = usuarios.findByNombreCompleto(username);
-             solicitud.setIdCliente(usuario.getIdUsuario());
+        if (auth != null && auth.isAuthenticated()) {
+            String username = auth.getName();
+            Usuario usuario = usuarios.findByNombreCompleto(username);
+            solicitud.setIdCliente(usuario.getIdUsuario());
         }
         solicitudServicioRepository.save(solicitud);
         return solicitud;
     }
-    
+
     // Endpoint GET para obtener todas las solicitudes
     @RequestMapping("/solicitudes")
     @GetMapping
     public List<SolicitudServicio> getAllSolicitudes() {
         return solicitudServicioRepository.findAll();
     }
-    
-    //Obtener solicitud por id
+
+    // Obtener solicitud por id
     @GetMapping("/solicitudes/{id}")
     public ResponseEntity<SolicitudServicio> getSolicitudById(@PathVariable Long id) {
         Optional<SolicitudServicio> solicitud = solicitudServicioRepository.findById(id);
@@ -73,11 +74,10 @@ public class SolicitudServicioController {
             return ResponseEntity.notFound().build();
         }
     }
-    
-    
-    //MODIFICAR
+   
+    // PUT: Modificar solicitud de servicio especifica
     @PutMapping("/solicitudes/{id}")
-    public ResponseEntity<?> actualizarProducto(@PathVariable Long id, @RequestBody SolicitudServicio solicitudActualizado) {
+    public ResponseEntity<?> actualizarSolicitudServicio(@PathVariable Long id, @RequestBody SolicitudServicio solicitudActualizado) {
         Optional<SolicitudServicio> solicitudOptional = solicitudServicioRepository.findById(id);
 
         if (!solicitudOptional.isPresent()) {
@@ -93,19 +93,57 @@ public class SolicitudServicioController {
         solicitudExistente.setEstado(solicitudActualizado.getEstado());
         solicitudExistente.setMontoPendienteCotizacion(solicitudActualizado.getMontoPendienteCotizacion());
         solicitudExistente.setCantidadSesiones(solicitudActualizado.getCantidadSesiones());
-        //Creo tantas sesiones como 
+        // Creo tantas sesiones como
         solicitudExistente.setRequiereCertificado(solicitudActualizado.getRequiereCertificado());
         Authentication auth = SecurityContextHolder.getContext().getAuthentication();
-            if (auth != null && auth.isAuthenticated()) {
-                String username = auth.getName(); //luego cambiar por el correo para que no existan duplicados
-                Usuario usuario = usuarios.findByNombreCompleto(username);
-                solicitudExistente.setIdGerente(usuario.getIdUsuario());
-            }
+        if (auth != null && auth.isAuthenticated()) {
+            String username = auth.getName(); // luego cambiar por el correo para que no existan duplicados
+            Usuario usuario = usuarios.findByNombreCompleto(username);
+            solicitudExistente.setIdGerente(usuario.getIdUsuario());
+        }
         solicitudExistente.setIdCertificado(solicitudActualizado.getIdCertificado());
         SolicitudServicio solicitudModificado = solicitudServicioRepository.save(solicitudExistente);
         return ResponseEntity.ok(solicitudModificado);
     }
     
+    // PUT: Modificar el monto de la solicitud de servicio especifica
+    @PutMapping("/solicitudes/actualizar_monto/{id}")
+    public ResponseEntity<?> actualizarMontoSS(@PathVariable Long id, @RequestBody SolicitudServicio solicitudActualizado) {
+        Optional<SolicitudServicio> solicitudOptional = solicitudServicioRepository.findById(id);
+
+        if (!solicitudOptional.isPresent()) {
+            return ResponseEntity.notFound().build();
+        }
+
+        SolicitudServicio solicitudExistente = solicitudOptional.get();
+
+        solicitudExistente.setMontoPendienteCotizacion(solicitudActualizado.getMontoPendienteCotizacion());
+        SolicitudServicio solicitudModificado = solicitudServicioRepository.save(solicitudExistente);
+        
+        return ResponseEntity.ok(solicitudModificado);
+    }
+    
+    // PUT: Modificar el nro sesiones de la solicitud de servicio especifica
+    @PutMapping("/solicitudes/actualizar_numero_sesiones/{id}")
+    public ResponseEntity<?> actualizarNumeroSesionesSS(@PathVariable Long id, @RequestBody Map<String, Integer> body) {
+        Optional<SolicitudServicio> solicitudOptional = solicitudServicioRepository.findById(id);
+
+        if (!solicitudOptional.isPresent()) {
+            return ResponseEntity.notFound().build();
+        }
+
+        SolicitudServicio solicitudExistente = solicitudOptional.get();
+
+        Integer cantidadSesiones = body.get("cantidadSesiones");
+        solicitudExistente.setCantidadSesiones(cantidadSesiones.shortValue()); // convertir a Short si hace falta
+
+        SolicitudServicio solicitudModificado = solicitudServicioRepository.save(solicitudExistente);
+
+        return ResponseEntity.ok(solicitudModificado);
+    }
+
+    
+
     // GET: Obtener datos completos de la solicitud de servicio especifica
     @GetMapping("/solicitud_servicio_detallado/{id}")
     public ResponseEntity<SolicitudServicioUsuarioDto> getSolicitudCompletaByID(@PathVariable Long id) {
@@ -142,7 +180,7 @@ public class SolicitudServicioController {
 
         return ResponseEntity.ok(dto);
     }
-    
+
     // GET: Obtiene todas las solicitudes realizadas por un cliente especifico
     @GetMapping("/solicitudes/cliente/{idCliente}")
     public ResponseEntity<List<SolicitudServicio>> getSolicitudesByClienteId(@PathVariable Long idCliente) {
@@ -158,8 +196,8 @@ public class SolicitudServicioController {
     // GET: Obtener el monto pendiente de cotizacion y sesion de un cliente especifico y servicio especifico
     @GetMapping("/solicitudes/monto_pendiente/{idCliente}/{idSolicitudServicio}")
     public ResponseEntity<?> obtenerMontosPendientes(
-            @PathVariable Long idCliente,
-            @PathVariable Long idSolicitudServicio) {
+        @PathVariable Long idCliente,
+        @PathVariable Long idSolicitudServicio) {
 
         Optional<SolicitudServicio> solicitudOpt = solicitudServicioRepository.findById(idSolicitudServicio);
 
@@ -176,15 +214,25 @@ public class SolicitudServicioController {
         BigDecimal montoCotizacion = solicitud.getMontoPendienteCotizacion();
 
         List<Sesion> sesiones = sesionRepository.findBySolicitudServicio_IdSolicitudServicio(idSolicitudServicio);
+
         List<BigDecimal> montosSesion = sesiones.stream()
                 .map(Sesion::getMontoPendienteSesion)
-                .toList();
+                .collect(Collectors.toList());
 
-        MontosPendientesDto respuesta = new MontosPendientesDto(montoCotizacion, montosSesion);
+        List<String> estadosSesion = sesiones.stream()
+                .map(Sesion::getEstado)
+                .collect(Collectors.toList());
 
+        MontosPendientesDto respuesta = new MontosPendientesDto(
+            solicitud.getIdCliente(),
+            solicitud.getIdSolicitudServicio(),
+            montoCotizacion,
+            montosSesion,
+            estadosSesion
+        );
         return ResponseEntity.ok(respuesta);
     }
-    
+
     // GET: Obtener lista de montos pendientes de sesiones dado un id cliente especifico
     @GetMapping("/solicitudes/monto_pendiente_sesiones/{idCliente}")
     public ResponseEntity<?> obtenerMontosPendientesSesiones(@PathVariable Long idCliente) {
@@ -198,11 +246,12 @@ public class SolicitudServicioController {
 
         // 2. Construir la respuesta
         List<ListaSolicitudesMontoSesionDto> respuesta = solicitudes.stream().map(solicitud -> {
-            List<Sesion> sesiones = sesionRepository.findBySolicitudServicio_IdSolicitudServicio(solicitud.getIdSolicitudServicio());
+            List<Sesion> sesiones = sesionRepository
+                    .findBySolicitudServicio_IdSolicitudServicio(solicitud.getIdSolicitudServicio());
 
             List<SesionMontoDto> sesionesDto = sesiones.stream()
-                .map(s -> new SesionMontoDto(s.getIdSesion(), s.getMontoPendienteSesion(), s.getEstado()))
-                .toList();
+                    .map(s -> new SesionMontoDto(s.getIdSesion(), s.getMontoPendienteSesion(), s.getEstado()))
+                    .toList();
 
             return new ListaSolicitudesMontoSesionDto(solicitud.getIdSolicitudServicio(), sesionesDto);
         }).toList();
@@ -225,4 +274,32 @@ public class SolicitudServicioController {
 
         return ResponseEntity.ok(solicitudesConMonto);
 }
+
+    // NUEVO: Obtener solicitudes del cliente autenticado
+    @GetMapping("/clienteSolicitudes")
+    public List<SolicitudServicio> getSolicitudesDelCliente() {
+        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
+        if (auth != null && auth.isAuthenticated()) {
+            String username = auth.getName();
+            Usuario usuario = usuarios.findByNombreCompleto(username);
+            return solicitudServicioRepository.findByIdClienteAndEstado(usuario.getIdUsuario(), "Aprobado");
+        }
+        return List.of();
+    }
+    //-----------------------------------------------------------------------------------------
+    //PARA ENVIAR BIEN LA SOLICITUD DE SERVICIO CON MONTOS, TRABAJADORES, Y SESIONES ASIGNADAS
+    //-----------------------------------------------------------------------------------------
+    @Autowired
+    private AsignarTareaTrabajadoresCompletoService service;
+    @PostMapping("/enviar_datos_completos_SS")
+    public ResponseEntity<?> procesarSolicitudCompleta(@RequestBody DatosFinalesTTDto datos) {
+        try {
+            service.procesarSolicitudCompleta(datos);
+            return ResponseEntity.ok("Solicitud procesada correctamente");
+        } catch (Exception e) {
+            // Puedes loggear el error si quieres
+            return ResponseEntity.status(500).body("Error procesando la solicitud: " + e.getMessage());
+        }
+    }
+    //-----------------------------------------------------------------------------------------
 }
